[gd_scene load_steps=8 format=2]

[ext_resource path="res://models/house_base.material" type="Material" id=1]
[ext_resource path="res://Scenes/house/house_part.gd" type="Script" id=2]

[sub_resource type="ArrayMesh" id=1]
resource_name = "house_base_Cube"
surfaces/0 = {
"aabb": AABB( -1, -1, -1, 2, 2, 2.00001 ),
"array_data": PoolByteArray( 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 129, 0, 0, 127, 0, 54, 0, 60, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 127, 63, 0, 48, 0, 52, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 127, 0, 54, 0, 0, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 129, 0, 0, 127, 0, 57, 0, 60, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 0, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 129, 63, 0, 59, 0, 52, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 129, 0, 0, 127, 0, 54, 0, 58, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 127, 63, 0, 48, 0, 56, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 128, 191, 127, 127, 0, 127, 0, 54, 0, 58, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 129, 0, 0, 127, 0, 57, 0, 58, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 127, 127, 0, 127, 0, 57, 0, 58, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 129, 63, 0, 59, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 129, 127, 63, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 63, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 127, 129, 63, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 0, 129, 127, 63, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 127, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 128, 191, 127, 0, 0, 127, 0, 54, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 127, 0, 127, 0, 57, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 0, 127, 129, 63, 0, 57, 0, 56, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 191, 127, 0, 0, 127, 0, 57, 0, 56 ),
"array_index_data": PoolByteArray( 0, 0, 9, 0, 3, 0, 0, 0, 6, 0, 9, 0, 8, 0, 21, 0, 10, 0, 8, 0, 19, 0, 21, 0, 20, 0, 17, 0, 23, 0, 20, 0, 14, 0, 17, 0, 13, 0, 4, 0, 15, 0, 13, 0, 2, 0, 4, 0, 7, 0, 12, 0, 18, 0, 7, 0, 1, 0, 12, 0, 22, 0, 5, 0, 11, 0, 22, 0, 16, 0, 5, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, 1, 1, 1, -1, 1, 1 )

[sub_resource type="ArrayMesh" id=3]
surfaces/0 = {
"aabb": AABB( -1.02887, -1.02887, -1.02887, 2.05773, 2.05773, 2.05774 ),
"array_data": PoolByteArray( 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 63, 129, 0, 0, 127, 0, 54, 0, 60, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 63, 0, 129, 127, 64, 0, 48, 0, 52, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 63, 0, 0, 0, 127, 0, 54, 0, 0, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 63, 129, 0, 0, 127, 0, 57, 0, 60, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 63, 0, 0, 0, 127, 0, 57, 0, 0, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 63, 0, 127, 129, 64, 0, 59, 0, 52, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 191, 129, 0, 0, 127, 0, 54, 0, 58, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 191, 0, 129, 127, 64, 0, 48, 0, 56, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 191, 127, 127, 0, 127, 0, 54, 0, 58, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 191, 129, 0, 0, 127, 0, 57, 0, 58, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 191, 127, 127, 0, 127, 0, 57, 0, 58, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 191, 0, 127, 129, 64, 0, 59, 0, 56, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 63, 0, 129, 127, 64, 0, 54, 0, 52, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 63, 0, 0, 0, 127, 0, 54, 0, 52, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 63, 127, 0, 0, 127, 0, 54, 0, 52, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 63, 0, 0, 0, 127, 0, 57, 0, 52, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 63, 0, 127, 129, 64, 0, 57, 0, 52, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 63, 127, 0, 0, 127, 0, 57, 0, 52, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 191, 0, 129, 127, 64, 0, 54, 0, 56, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 191, 127, 127, 0, 127, 0, 54, 0, 56, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 191, 127, 0, 0, 127, 0, 54, 0, 56, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 191, 127, 127, 0, 127, 0, 57, 0, 56, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 191, 0, 127, 129, 64, 0, 57, 0, 56, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 191, 127, 0, 0, 127, 0, 57, 0, 56 ),
"array_index_data": PoolByteArray( 0, 0, 3, 0, 9, 0, 0, 0, 9, 0, 6, 0, 8, 0, 10, 0, 21, 0, 8, 0, 21, 0, 19, 0, 20, 0, 23, 0, 17, 0, 20, 0, 17, 0, 14, 0, 13, 0, 15, 0, 4, 0, 13, 0, 4, 0, 2, 0, 7, 0, 18, 0, 12, 0, 7, 0, 12, 0, 1, 0, 22, 0, 11, 0, 5, 0, 22, 0, 5, 0, 16, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="BoxShape" id=5]

[node name="house_roof" type="Spatial"]
script = ExtResource( 2 )
part = 4

[node name="Cube001" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="Cube001"]

[node name="CollisionShape" type="CollisionShape" parent="Cube001/StaticBody"]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Cube001"]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="ClickArea" type="Area" parent="Cube001"]

[node name="CollisionShape_right" type="CollisionShape" parent="Cube001/ClickArea"]
transform = Transform( 0.1, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 1.05556, 0, 0 )
shape = SubResource( 5 )

[node name="CollisionShape_left" type="CollisionShape" parent="Cube001/ClickArea"]
transform = Transform( 0.1, 0, 0, 0, 0.9, 0, 0, 0, 0.9, -1.02702, 0, 0 )
shape = SubResource( 5 )

[node name="CollisionShape_front" type="CollisionShape" parent="Cube001/ClickArea"]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.1, 0, 0, 1.00899 )
shape = SubResource( 5 )

[node name="CollisionShape_back" type="CollisionShape" parent="Cube001/ClickArea"]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.1, 0, 0, -1.02381 )
shape = SubResource( 5 )

[node name="CollisionShape_up" type="CollisionShape" parent="Cube001/ClickArea"]
transform = Transform( 0.9, 0, 0, 0, 0.1, 0, 0, 0, 0.9, 0, 1.03121, 0 )
shape = SubResource( 5 )

[node name="CollisionShape_down" type="CollisionShape" parent="Cube001/ClickArea"]
transform = Transform( 0.9, 0, 0, 0, 0.1, 0, 0, 0, 0.9, 0, -0.985171, 0 )
shape = SubResource( 5 )

[connection signal="input_event" from="Cube001/ClickArea" to="." method="_on_AreaRight_input_event"]
